--- a/src/App.css
+++ b/src/App.css
@@ -86,5 +86,11 @@
   border: 1.5px solid black;
   border-radius: 4px;
   padding: 6px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+@media only screen and (max-width: 480px) {
+  .text-area {
+    width: 90%;
+  }
 }
